--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "^14.0.2",
     "@angular/compiler": "^14.0.2",
     "@angular/core": "^14.0.2",
+    "@angular/fire": "^7.4.1",
     "@angular/forms": "^14.0.2",
     "@angular/material": "^14.0.2",
     "@angular/platform-browser": "^14.0.2",
